--- a/src/styles/partials/_dev-projects.scss
+++ b/src/styles/partials/_dev-projects.scss
@@ -86,7 +86,8 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    align-content: flex-start;
+    align-items: center;
+    flex-direction: column;
     width: 80%;
     height: 100%;
     transition: all 0.5s ease;
@@ -100,7 +101,6 @@
     .project-card {
         background: $white;
         border-left: $accent-border;
-        align-self: flex-start;
         padding: $vspace $hspace 0;
         margin-top: 40px;
         width: 60%;
